# qt5-16ch-dsa-acquisition

./: .gitignore  CMakeLists.txt  README.md  read_dsa_data_and_plot.m  read_seismic_data_and_plot.m  使用说明.docx  项目文件夹内容说明.md
resources/: app_icon.rc  resources.qrc
resources/styles/: main.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: acquisitionservice.cpp  acquisitionservice.h  acquisitiontcpreceiverservice.cpp  acquisitiontcpreceiverservice.h  acquisitiontcpstreamservice.cpp  acquisitiontcpstreamservice.h  circularbuffer.cpp  circularbuffer.h  dsa16chdeviceservice.cpp  dsa16chdeviceservice.h  dsa16chdllloader.cpp  dsa16chdllloader.h  dsa16chtypes.cpp  dsa16chtypes.h  multichanneldatastore.cpp  multichanneldatastore.h  plotservice.cpp  plotservice.h  projectmanager.cpp  projectmanager.h
src/dialogs/: aboutdialog.cpp  newprojectdialog.cpp  newprojectdialog.h
src/models/: projectfilemodel.cpp  projectfilemodel.h
src/pages/: acquisitionpage.cpp  acquisitionpage.h  homepage.cpp  homepage.h  settingspage.cpp  settingspage.h
src/theme/: designtokens.h  themehelper.cpp  themehelper.h
src/widgets/: channelselectorwidget.cpp  channelselectorwidget.h  menubutton.cpp  menubutton.h  waveformgridwidget.cpp  waveformgridwidget.h  waveformview.cpp  waveformview.h
tools/: dsa_tcp_receiver.py
